@@ -149,7 +149,6 @@ describe      = Media Player
 website       = http://www.songbirdnest.com/
 scrape        = http://download.songbirdnest.com/installer/win32/
 version       = Songbird_([0-9]_[0-9])_i686.exe
-download      = http://download.songbirdnest.com/installer/win32/
 filename      = Songbird_#VERSION#_i686.exe
 instparam     = /S
 upgrades      = false
@@ -292,7 +291,6 @@ uninstparam   = /S
 ; website       = http://blog.genotrance.com/applications/appsnap/
 ; scrape        = http://genotrance.com/code/appsnap/
 ; version       = appsnapsetup-([0-9]\.[0-9]+).exe
-; download      = http://genotrance.com/code/appsnap/
 ; filename      = appsnapsetup-#VERSION#.exe
 ; instparam     = /S
 ; upgrades      = false
@@ -352,7 +350,6 @@ describe      = GUI Tail Utility
 website       = http://blog.genotrance.com/applications/clump/
 scrape        = http://genotrance.com/code/clump/
 version       = clumpsetup-v([0-9]\.[0-9]*).exe
-download      = http://genotrance.com/code/clump/
 filename      = clumpsetup-v#VERSION#.exe
 instparam     = /S
 upgrades      = false
@@ -397,14 +394,14 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; website       - Link to the application's website
 ; scrape        - Web URL that lists all the versions of the application
 ; version       - Regular expression to match the version format
-; download      - Web URL from where application can be downloaded
+; download      - Web URL from where application can be downloaded (defaults to scrape)
 ; filename      - Filename of the application at the download URL
 ; referer       - Web URL to set as the referer for the download URL (defaults to scrape)
 ; instparam     - Flags to append for install
 ; upgrades      - true: application upgrades itself, false: uninstall then install
 ; chinstdir     - Flags to specify the install directory
 ; uninstall     - Name of the folder in registry containing uninstall information
-; uninstparam   - Flags to apppend for uninstall
+; uninstparam   - Flags to append for uninstall
 
 ; Tips for specific installers
 ;
